--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 /*======================================
-Theme Name: Cardigan
-Theme URI: http://themezee.com/themes/cardigan/
-Description: Cardigan is a great way to start your personal blog or magazine website today. The theme is very easy to use and looks awesome on every device. It includes a beautiful featured post slideshow and a clean and flexible Magazine Homepage template. Hope you enjoy it!
+Theme Name: Glades
+Theme URI: http://themezee.com/themes/glades/
+Description: Glades is a great way to start your personal blog or magazine website today. The theme is very easy to use and looks awesome on every device. It includes a beautiful featured post slideshow and a clean and flexible Magazine Homepage template. Hope you enjoy it!
 Version: 1.0
 Author: ThemeZee
 Author URI: http://themezee.com
 Tags: two-columns, light, blue, custom-background, custom-header, custom-menu, editor-style, featured-image-header, featured-images, flexible-header, custom-colors, full-width-template, sticky-post, threaded-comments, translation-ready, theme-options, fluid-layout, responsive-layout, one-column, left-sidebar, right-sidebar, three-columns, black, red, silver, white, green, gray
-Text Domain: cardigan
+Text Domain: glades
 Domain Path: /languages/
 License: GNU General Public License v2.0
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
@@ -1484,7 +1484,7 @@ embed, iframe, object, video {
 }
 
 /* Front Page Category Area Thre (two columns) */
-.cardigan_category_posts_columns {
+.glades_category_posts_columns {
 	padding: 0;
 }
 #widget-category-posts-columns .category-posts-columns .category-posts-columns-content .category-posts-columns-post-list {
